--- a/css/sequences.css
+++ b/css/sequences.css
@@ -1,3 +1,4 @@
+/*
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 12px;
@@ -7,7 +8,7 @@ body {
   height: 700px;
   margin-top: 10px;
 }
-
+*/
 #main {
   float: left;
   width: 750px;
@@ -51,5 +52,5 @@ body {
 }
 
 #percentage {
-  font-size: 2.5em;
+  font-size: 3.5em;
 }
